--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="card">
       <div class="card__face card__face--front">About Me</div>
       <div class="card__face card__face--back">
-        <p>Name: John Doe</p>
+        <p>Name: Padmanabha Sahu</p>
         <p>Frontend Developer</p>
         <p>Location: India</p>
       </div>
@@ -40,9 +40,8 @@
     <div class="card">
       <div class="card__face card__face--front">Contact</div>
       <div class="card__face card__face--back">
-        <p>Email: john@example.com</p>
-        <p>GitHub: @johndoe</p>
-        <p>LinkedIn: /in/johndoe</p>
+        <p>Email: padmansahu.possible@gmail.com</p>
+        <p>GitHub: @pdmnbhs</p>
       </div>
     </div>
   </div>
